[package]
name = "ldtk_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.25.2"
bevy-inspector-egui-derive = "=0.25.1"
bevy_ecs_ldtk = "0.10.0"
avian2d = "0.1"
bevy_light_2d = "0.3.0"
bevy_mod_picking = "0.20.1"
leafwing-input-manager = "0.15.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
